alignment fix

--- a/src/pages/Work/Work.scss
+++ b/src/pages/Work/Work.scss
@@ -19,7 +19,7 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		align-items: center;
+		align-items: baseline;
 		margin-bottom: $space-16;
 	}
 
